# devclean-ai

./: .gitignore  package-lock.json  package.json  readme.md
.github/workflows/: desktop-build.yml  desktop-release.yml
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCH.md  IMPLEMENTATION.md  RELEASE.md  TASKS.md
scripts/: bump-version.mjs
source/: app.tsx  cli.tsx
source/core/: ai.ts  cache.ts  risk.ts  scanner.ts  types.ts
source/store/: useStore.ts
source/types/: gradient-string.d.ts
source/ui/: ApiKeyBlock.tsx  FooterStatus.tsx  Header.tsx  ProjectDetails.tsx  ProjectList.tsx  RiskLegend.tsx  ScanStatus.tsx  format.ts
