[package]
name = "devclean-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
dirs = "6.0"

[dependencies.devclean-core]
path = "../../../packages/core-rs"

[features]
custom-protocol = ["tauri/custom-protocol"]
